# TS341

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  Rapport.md  Réflexion.md  cahier_des_charges.md  pyproject.toml
.github/workflows/: black.yml  mypy.yml  pylint.yml  pytest.yml  ruff_docstyle.yml
ts341_project/: bytetrack.yaml  bytetrack_imm.py  comparaison_modeles.py  main.py  simple_bytetrack.py  single_object_tracker.py  tracker_evaluation.py  yolo.py  yolo_plus_imm.py
ts341_project/Anto/: flow.py  yolo.py
ts341_project/entrainement/: clean_dataset.py  finetune_yolo.py  fix_label_classes.py  frame_extraction.py  merge_labeled_batches.py  split_for_labeling.py
ts341_project/entrainement/datasets/my_drones/: data.yaml
ts341_project/entrainement/datasets/my_drones/my_drones_final/: data.yaml
ts341_project/entrainement/datasets/public_drones/: data.yaml
ts341_project/execution/: detection_complete.py
videos/record_10_03/plongeon/: capture_cloudy-daylight_True_10_03_14_19_39_cam1.mp4.json  capture_cloudy-daylight_True_10_03_14_19_39_cam1_yolo.mp4.json  capture_cloudy-daylight_True_10_03_14_32_33_cam1.mp4.json  capture_cloudy-daylight_True_10_03_14_32_33_cam1.srt
