[tool.poetry]
name = "ts341"
version = "0.1.0"
description = "A python package for TS341"
authors = []

readme = "README.md"
packages = [{include = "ts341_project"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
opencv-python = "^4.12"
matplotlib = "^3.10.7"
ultralytics = "^8.3.0"
scikit-learn = "^1.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"

[tool.poetry.scripts]
yolo = "ts341_project.yolo_plus_imm:main"
main = "ts341.app:main"

[dependency-groups]
dev = [
    "pre-commit (>=4.4.0,<5.0.0)",
	"pytest (>=7.4)"
]
